# TwStockEmulator

./: .env.example  .gitignore  0703待修.md  0703雲端LLM多Agent策略檢討架構.md  README.md  pyproject.toml
scripts/: build_exe.ps1  run_demo.ps1  run_dev.ps1  seed_demo.ps1  smoke_multi_agent_fake.py
src/tw_watchdesk/: __main__.py  app.py  config.py  demo_seed.py  live_check.py  llm.py  models.py  nova.py  quote_diagnostics.py  redaction.py  review.py  scout.py  setup_env.py  setup_wizard.py  simulation.py  storage.py  strategy.py  strategy_versions.py  worker.py
tests/: test_app_formatting.py  test_config.py  test_demo_seed.py  test_llm.py  test_nova.py  test_quote_diagnostics.py  test_review.py  test_scout.py  test_setup_env.py  test_simulation.py  test_storage.py  test_strategy.py  test_strategy_versions.py  test_worker.py
